--- a/src/style/base/_root.scss
+++ b/src/style/base/_root.scss
@@ -10,6 +10,7 @@
   --table-hover: rgb(244, 244, 244);
   --table-row-bg: rgba(255, 255, 255);
   --border-color-1: rgb(34, 34, 34, 0.1);
+  --text-label: var(--text-primary-2);
 }
 
 :root.dark {
